# anki-toolkit

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  README.md  release-plz.toml
.github/workflows/: ci.yml  docker.yml  docs.yml
crates/ankit/: CHANGELOG.md  Cargo.toml  README.md
crates/ankit-builder/: CHANGELOG.md  Cargo.toml
crates/ankit-builder/examples/: build_deck.rs
crates/ankit-builder/src/: apkg.rs  cloze.rs  connect.rs  diff.rs  error.rs  export.rs  lib.rs  markdown.rs  schema.rs  sql.rs  sync.rs
crates/ankit-builder/tests/: apkg_integration.rs  markdown_integration.rs
crates/ankit-engine/: CHANGELOG.md  Cargo.toml  README.md
crates/ankit-engine/examples/: workflow_demo.rs
crates/ankit-engine/src/: analyze.rs  backup.rs  deduplicate.rs  enrich.rs  error.rs  export.rs  import.rs  lib.rs  media.rs  migrate.rs  organize.rs  progress.rs  search.rs
crates/ankit-engine/tests/: analyze.rs  backup.rs  enrich.rs  import.rs  organize.rs  progress.rs
crates/ankit-engine/tests/common/: mod.rs
crates/ankit-mcp/: CHANGELOG.md  Cargo.toml
crates/ankit-mcp/src/: main.rs  state.rs
crates/ankit-mcp/src/tools/: analyze.rs  backup.rs  cards.rs  decks.rs  deduplicate.rs  enrich.rs  export.rs  import.rs  media.rs  misc.rs  mod.rs  models.rs  notes.rs  organize.rs  progress.rs  tags.rs  toml.rs
crates/ankit/examples/: add_notes.rs  basic.rs  batch.rs  live_test.rs  search.rs
crates/ankit/src/: client.rs  error.rs  lib.rs  query.rs
crates/ankit/src/actions/: cards.rs  decks.rs  graphical.rs  media.rs  miscellaneous.rs  mod.rs  models.rs  notes.rs  statistics.rs
crates/ankit/src/types/: card.rs  media.rs  mod.rs  note.rs
crates/ankit/tests/: cards.rs  decks.rs  graphical.rs  media.rs  miscellaneous.rs  models.rs  notes.rs  statistics.rs
crates/ankit/tests/common/: mod.rs
docs/: book.toml
docs/book/: 404.html  api-reference.html  intro.html  print.html  searcher-c2a407aa.js  searchindex-8022d309.js  toc-c36837f4.js  toc.html
docs/book/cookbook/: deck-organization.html  import-workflow.html  media-management.html
docs/book/deck-builder/: ankiconnect-import.html  apkg-generation.html  toml-format.html
docs/book/getting-started/: installation.html  quick-start.html
docs/book/mcp-server/: examples.html  setup.html  tools-reference.html
docs/src/: SUMMARY.md  api-reference.md  intro.md
docs/src/cookbook/: deck-organization.md  deduplication.md  import-workflow.md  media-management.md
docs/src/deck-builder/: ankiconnect-import.md  apkg-generation.md  toml-format.md
docs/src/dev-guide/: ankit-builder.md  ankit-engine.md  ankit.md  api-docs.md  crates.md  overview.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/mcp-server/: examples.md  setup.md  tools-reference.md
docs/src/user-guide/: claude-desktop-setup.md  example-prompts.md  getting-started.md  installation.md  markdown-fields.md  mcp-server.md  syncing.md  toml-builder.md  toml-format.md  tools-reference.md
examples/: add_notes.rs  basic.rs  batch.rs  live_test.rs  search.rs
src/: client.rs  error.rs  lib.rs  request.rs
src/actions/: cards.rs  decks.rs  graphical.rs  media.rs  miscellaneous.rs  models.rs  notes.rs  statistics.rs
src/types/: card.rs  deck.rs  model.rs  note.rs
tests/: cards.rs  decks.rs  graphical.rs  media.rs  miscellaneous.rs  models.rs  notes.rs  statistics.rs
