[package]
name = "yanki"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Complete async Rust client for the AnkiConnect API"
repository = "https://github.com/joshrotenberg/yanki"
keywords = ["anki", "flashcards", "spaced-repetition", "ankiconnect", "api-client"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
