[package]
name = "ankit-builder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "TOML-based Anki deck builder with .apkg generation and AnkiConnect import"
keywords = ["anki", "flashcards", "apkg", "toml", "deck-builder"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["apkg", "connect"]
apkg = ["dep:rusqlite", "dep:zip", "dep:tempfile", "dep:serde_json"]
connect = ["dep:ankit"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
thiserror.workspace = true

# apkg feature deps
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
zip = { version = "2.2", default-features = false, features = ["deflate"], optional = true }
tempfile = { version = "3.14", optional = true }
serde_json = { workspace = true, optional = true }

# connect feature deps
ankit = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.14"
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros"] }
