[package]
name = "ankit-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level workflow operations for Anki via AnkiConnect"
keywords = ["anki", "flashcards", "spaced-repetition", "ankiconnect"]
categories = ["api-bindings", "asynchronous"]

[features]
default = ["import", "export", "organize", "analyze", "migrate", "media", "progress", "enrich", "deduplicate"]
import = []
export = []
organize = []
analyze = []
migrate = []
media = []
progress = []
enrich = []
deduplicate = []

[dependencies]
ankit.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex-lite = "0.1"

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["test-util"] }
