[package]
name = "ankit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Complete async Rust client for the AnkiConnect API"
keywords = ["anki", "flashcards", "spaced-repetition", "ankiconnect", "api-client"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["test-util"] }
